--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -2,12 +2,12 @@
 {% block content %}
  <div class="container spaced-top-5">
   <div class="large-12 columns">
-    <h2>Inregistrare</h2>
+    <h2>Register</h2>
     <form class="col" method="POST" action="{% url 'account:register' %}">
         {% csrf_token %}
         <div class="row gy-4">
             <div>
-              <label for="username" class="form-label">Nume de utilizator</label>
+              <label for="username" class="form-label">Username</label>
               <input type="text" name="username" id="username" class="form-control" aria-describedby="emailHelp">
             </div>
         </div>
@@ -36,7 +36,7 @@
       {% endif %}
       <div class="row align-items-center">
         <div class="col">
-          <button type="submit" class="btn-custom spaced-top-2">Inregistrare</button>
+          <button type="submit" class="btn-custom spaced-top-2">Register</button>
         </div>
       </div>
     </form>
