--- a/sweet_market_place18_app/templates/sweet_market_place18_app/home.html
+++ b/sweet_market_place18_app/templates/sweet_market_place18_app/home.html
@@ -5,7 +5,7 @@
     <div class="row">
         <div class="col">
             <div class="row">
-                <h1 class="heading-title">Savoare delicata. Textura imaculata. Expresie unica.</h1>
+                <h1 class="heading-title">Sweet flavor. Immaculate texture. Unique expression.</h1>
             </div>
             <a href="{% url 'sweet_market_place18_app:products' %}">
                 <button class="btn-custom spaced-top-2">See products</button>
