--- a/sweet_market_place18_app/templates/sweet_market_place18_app/navbar.html
+++ b/sweet_market_place18_app/templates/sweet_market_place18_app/navbar.html
@@ -1,7 +1,7 @@
 {% block navbar %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid container">
-    <a class="navbar-brand brand-logo" href="/">Pastry & Sweets PYTA18</a>
+    <a class="navbar-brand brand-logo" href="/">Pastry & Sweets </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -11,20 +11,20 @@
           <a class="nav-link active" aria-current="page" href="/">Home</a>
           <a class="nav-link active" aria-current="page" href="{% url 'sweet_market_place18_app:products' %}">Products</a>
           {% if user.is_authenticated %}
-            <a class="nav-link" href="{% url 'logout' %}" title="Deautentificare"> Hi, {{user.username}}
+            <a class="nav-link" href="#"> Hi, {{user.username}}
               <i class="fas fa-user"></i>
             </a>
             <form class="nav-link" action="{% url 'logout' %}" method="POST">
               {% csrf_token %}
-              <button class="logout-button" type="submit">
+              <button class="logout-button" type="submit" title="Logout">
                 <i class="fas fa-sign-out-alt"></i>
               </button>
             </form>
-            <a class="nav-link" href="#" title="Coșul tău">
+            <a class="nav-link" href="#" title="Shopping cart">
               <i class="fa-solid fa-shopping-cart"></i>
             </a>
           {% else %}
-            <a class="nav-link" href="{% url 'account:login' %}" title="Autentificare">
+            <a class="nav-link" href="{% url 'account:login' %}" title="Login">
               <i class="fa-solid fa-sign-in-alt"></i>
             </a>
           {% endif %}
